# cmd/docs/swagger.yaml
@@ -55,13 +55,6 @@ definitions:
       uuid:
         type: string
     type: object
-  schema.CategoryQueryParam:
-    properties:
-      active:
-        type: boolean
-      code:
-        type: string
-    type: object
   schema.Login:
     properties:
       password:
@@ -138,12 +131,18 @@ definitions:
       code:
         type: string
       description:
+        description: brand
         type: string
       name:
+        description: title
         type: string
       price:
         type: integer
+      thumbnail_path:
+        type: string
       uuid:
+        type: string
+      video_path:
         type: string
     type: object
   schema.ProductBodyParam:
@@ -367,12 +366,11 @@ paths:
       consumes:
       - application/json
       parameters:
-      - description: The body to get categories
-        in: body
-        name: Body
+      - description: Category code
+        in: path
+        name: code
         required: true
-        schema:
-          $ref: '#/definitions/schema.CategoryQueryParam'
+        type: string
       produces:
       - application/json
       responses:
@@ -385,6 +383,26 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get get category by code
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: The body to create a category
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/schema.Category'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/schema.Category'
+      security:
+      - ApiKeyAuth: []
+      summary: Post create category
   /api/v1/categories/{uuid}:
     get:
       parameters:
@@ -515,16 +533,14 @@ paths:
         name: Body
         required: true
         schema:
-          $ref: '#/definitions/schema.ProductBodyParam'
+          $ref: '#/definitions/schema.Product'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/schema.Product'
-            type: array
+            $ref: '#/definitions/schema.Product'
       security:
       - ApiKeyAuth: []
       summary: Post create product
